listName(): filter and map fileNames in one instruction + call getOriginalFilename() once
Signed-off-by: Etienne Homer <etiennehomer@gmail.com>